# playground-2022

./: .gitignore  .gitmodules  README.md
c/meson_tmpl/test/: meson.build
c/meson_tmpl/test/add/: test_add.c
leetcode/cpp/: .gitignore  CMakeLists.txt  hello_test.cc  lru_cache_test.cc  replacing_space_test.cc  reverse_linked_list_test.cc
leetcode/python/: 151_reverse_words_in_a_string_test.py  17_letter_combination_of_phone_number_test.py  232_implement_queue_using_stacks_test.py  332_reconstruct_itinerary_test.py  847_shortest_path_visiting_all_nodes_test.py  best_time_to_buy_and_sell_stock_121.py  binary_search_704.py  binary_subarrays_with_sum_930.py  continuous_subarray_sum_523.py  find_first_last_pos_34.py  find_smallest_letter_greater_than_target_744.py  invert_binary_tree_226.py  letter_combinations_of_a_phone_number_17.py  longest_subarray_of_1s_after_deleting_one_element_1493.py  longest_substring_without_repeating_characters_3.py  max_average_subarray_1_643.py  maximum_depth_of_binary_tree_104.py  maximum_length_substring_with_two_occurrences_3090.py  maximum_number_of_vowels_in_a_substring_of_given_length_1456.py  minimum_length_of_string_after_deleting_similar_ends_1750.py  minimum_size_subarray_sum-209.py  number_of_sub_arrays_of_size_k_and_average_greater_than_or_equal_to_threshold_1343.py  pyproject.toml  range_sum_query_immutable_303.py  reverse_string2_541.py  reverse_string_344.py  search_insert_pos_35.py  subarray_sum_equals_k_560.py  subarray_sums_divisible_by_k_974.py  subsets_78.py  sum_of_left_leaves_404.py  symmetric_tree_101.py  watering_plants_ii_2105.py  xor_queries_of_a_subarray_1310.py
leetcode/python/232_implement_queue_using_stacks/: main.py
leetcode/python/binary_tree/: tree.py  tree_test.py
leetcode/python/lc-rs/: Cargo.toml
leetcode/python/lc-rs/src/: lib.rs  subsets_78.rs
ml/langchain-example/: .gitignore  ai_jason_tutorial.py  langchain_quickstart.ipynb  pyproject.toml  quickstart.py
ml/llamaindex-example/: mongo.py  pyproject.toml  starter.py
ml/llamaindex-example/data/: judgement.txt
ml/llamaindex-example/storage/: default__vector_store.json  index_store.json
python/1brc_parquet/: .gitignore  main.py  pyproject.toml  test_parquet.py
python/airflow/airflow_github_crawler/: .gitignore  DEPLOYMENT.md  README.md  deploy.sh  docker-compose.services.yml  main.py  plan.md  pyproject.toml
python/airflow/airflow_github_crawler/dags/: github_trending_dag.py
python/airflow/airflow_github_crawler/tests/: test_github_service.py
python/airflow_example/: .gitignore  docker-compose.yaml  main.py  pyproject.toml  pyrightconfig.json
python/airflow_example/dags/: 01_game_analytics.py  example_hello.py
python/airflow_example/dags/game_analytics/: game_analytics.py  game_datasource.py  game_event.py  gamedata_generator.py
python/airflow_example/dags/services/: game_datasource.py  gamedata_generator.py
python/airflow_example/plans/: 01-game-analytics.md  02-iot-sensors.md  03-game-matchmaking.md  04-iot-drone-fleet.md  05-weather-crawler.md
python/airflow_example/tests/: conftest.py
python/arroyo_example/: .env  Dockerfile  QUICKSTART.md  README.md  dashboard.py  docker-compose.yml  init_arroyo.py  plan.md  price_producer.py  pyproject.toml  redis_writer.py
python/arroyo_example/pipelines/: 1m.sql  5m.sql  alerts.sql
python/arroyo_example/src/: models.py  redis_sink.py
python/dagster_example/dagster-quickstart/: README.md  pyproject.toml
python/fastapi_example/: .env  engine.py  main.py  pyproject.toml  test_main.py
python/fastapi_example/app/: config.py  docker-compose.yml  main.py
python/fastapi_example/app/entities/: chat_message.py  hero.py
python/fastapi_example/app/infra/: engine.py
python/fastapi_example/app/infras/: database.py
python/fastapi_example/app/repos/: stock_repo.py
python/fastapi_example/app/routers/: healthz.py  stock.py
python/fastapi_example/routers/v1/: HeroRouter.py  ItemRouter.py
python/fastapi_example/tests/: conftest.py
python/fastapi_example/tests/routers/: test_healthz.py  test_stock.py
python/flink_example/: .dockerignore  .gitignore  Dockerfile  GEMINI.md  QUICKSTART.md  README.md  dashboard.py  dashboard_redis.py  docker-compose.yml  download-jars.sh  entrypoint.sh  flink_cdc_pipeline.py  flink_cdc_simple.py  flink_pipeline.py  load_generator.py  main.py  plan.md  pyproject.toml  requirements.txt  run.sh  test_flink.py
python/flink_example/init-scripts/: 01-schema.sql  02-seed.sql
python/flink_example/tests/: test_snapshot.py
python/py_playground/: .gitignore  main.py  plan.md  pyproject.toml
python/py_playground/py_playground/arithmetic_parser/: CODE_REVIEW.md  parser.py
python/py_playground/py_playground/polars_example/: word_count_to_parquet.py
python/py_playground/py_playground/taskqueue/: __init__.py  mem_taskqueue.py  taskqueue.py
python/py_playground/tests/integration/: test_kafka_producer_consumer.py
pytorch/pytorch-ray/: README.md  pyproject.toml  train.py
rust/arrow_example/: Cargo.toml
rust/arrow_example/examples/: map_builder.rs  null_buffer.rs  primitive_array.rs  string_array.rs  struct_array.rs
rust/arrow_example/src/: lib.rs
rust/controller/: Cargo.toml  Dockerfile  README.md
rust/controller/kube/: cr.yml  deployment.yml  my-crd.yml  rbac.yml
rust/controller/src/: main.rs
rust/fuse/: Cargo.toml
rust/fuse/examples/: fuse3_example.rs  fuse3_pathmemfs.rs
rust/fuse/src/: lib.rs
rust/fuse/src/dummy_fs/: mod.rs
rust/proxy/: Cargo.toml  README.md
rust/proxy/examples/: server.rs
rust/proxy/src/: lib.rs
rust/proxy/src/proxy/: error.rs  mod.rs
rust/rust-operator/: Cargo.toml  log4rs.yml
rust/rust-operator/src/: main.rs
rust/rust_first_class/queryer/: Cargo.toml  README.md
rust/rust_first_class/queryer/examples/: covid.rs  dialect.rs
rust/rust_first_class/queryer/src/: convert.rs
ts/napi-example/: Cargo.toml  index.d.ts  index.js  package.json
ts/napi-example/.github/workflows/: CI.yml
ts/napi-example/__test__/: index.spec.mjs
ts/napi-example/benchmark/: index.bench.mjs
ts/napi-example/src/: lib.rs
(+3952 files in other folders)
