[tool.poetry]
name = "leetcode-python"
version = "0.1.0"
description = ""
authors = ["Eric Chang <e850506@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
