[tool.poetry]
name = "langchain-example"
version = "0.1.0"
description = ""
authors = ["unknowntpo <e850506@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-openai = "^0.1.1"
langchain = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
