[tool.poetry]
name = "langchain-example"
version = "0.1.0"
description = ""
authors = ["unknowntpo <e850506@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-openai = "^0.1.1"
langchain = "^0.1.13"
python-dotenv = "^1.0.1"
torch = "^2.2.2"
pillow = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
