[tool.poetry]
name = "llamaindex-example"
version = "0.1.0"
description = ""
authors = ["unknowntpo <e850506@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "0.10.15"
llama-index-llms-ollama = "^0.1.3"
llama-index-embeddings-ollama = "^0.1.2"
llama-index-readers-mongodb = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
