[project]
name = "airflow-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.13.0",
    "apache-airflow>=3.1.5",
    "apache-airflow-providers-amazon>=9.0.0",
    "mypy>=1.11",
    "polars>=1.37.1",
    "pyarrow>=22.0.0",
    "types-boto3-s3>=1.42.21",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "types-boto3-lite[s3]>=1.42.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dags"]

[tool.pyright]
extraPaths = ["dags"]
[tool.ruff]
src = ["dags"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)s %(name)s: %(message)s"
addopts = "-s"
