[project]
name = "faust-example"
version = "0.1.0"
description = "Faust BTC price monitoring with windowing alerts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.9.0",
    "yfinance>=0.2.0",
    "websockets>=12.0",
    "protobuf>=3.20.0,<4.0.0",
    "redis>=5.0.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
