[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.92.1", features = ["client","runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["v1_26"] }
hyper-rustls = "0.24.0"
hyper = { version = "0.14", features = ["full"] }
hyper-http-proxy = "1.0.0"
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
schemars = "0.8.12"
