[package]
name = "fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["cargo", "derive"] }
fuse3 = { version = "0.8.1",  features = ["tokio-runtime", "unprivileged"]  }
fuser = "0.15.1"
libc = "0.2.51"
tokio = { version = "1.36", features = ["macros", "rt", "time", "signal"] }
futures-util = "0.3.30"
mio = { version = "0.8.11", features = ["os-poll"] }
tempfile = "3.10"
bytes = "1.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4.22"

[dev-dependencies]
env_logger = "0.11.3"
