[package]
edition = "2021"
name = "napi-example"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
features = "0.10.0"
futures = "0.3"
# Ref: https://github.com/napi-rs/napi-rs/blob/main/examples/napi/Cargo.toml
napi = { version = "2", features = ["napi9","async", "tokio_rt", "tokio_fs", "tokio_macros"] }
napi-derive = "2"
rt = "0.5.0"
time = "0.3.36"
tokio = "1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
